# cao-reptile

./: .hgignore  CMakeLists.txt  README.md
mpiext/: MPI_env.hpp  MPI_ibuffer.hpp  MPI_obuffer.hpp  iterator_range.hpp  mpi_hostnames.hpp
notes/: notes.org  notes.tex  paper.tex
refactor/: Parser.cpp  inline-size.docx  refactor-reptile.docx
scripts/: d2_timings.csv  d3_timings.csv  fasta2fastq.py  fastq-filter-v1.0.pl  gen_phase_timings.py  gen_timings.py
scripts/d2/: gen_config.py  gen_config_default.py
scripts/d3/: gen_config.py  gen_config_default.py
src/: CMakeLists.txt  ECData.cpp  ECData.hpp  ECDriver.cpp  ECDriver.hpp  ECImpl.cpp  ECImpl.hpp  ECRunStats.cpp  ECRunStats.hpp  ECWDist.cpp  ECWDist.hpp  ErrorCorrector.cpp  ErrorCorrector.hpp  Makefile  Makefile.hist  Makefile.preptile  Makefile.test  Parser.cpp  Parser.h  WorkDistribution.cpp  WorkDistribution.hpp  aligned_allocator.hpp  build_hp_tree.hpp  cao-reptile  cao_util.h  caware_layout.cpp  caware_layout.hpp  coblivious_layout.cpp  coblivious_layout.hpp  count_kmers.cpp  count_kmers.hpp  filemerg.sh  find_neighbors.cpp  find_neighbors.h  flat_layout.hpp  hist_main.cpp  hp_precomputed_table.h  implicit_heap_policy.hpp  implicit_heap_search_c.h  implicit_hp_search_pure_c.hpp  (+15 more)
src/static_search/: generic_search.cpp
src/static_search/empty_policy/: empty_policy.cpp
src/static_search/heap_policy/: element_N.h  explicit_heap_policy.cpp  explicit_heap_search_pure_c.cpp  implicit_heap_policy.cpp  implicit_heap_search_pure_c.cpp
src/static_search/hp_policy/: element_p.h  explicit_hp_policy.cpp  explicit_hp_search_pure_c.cpp  hp_precomputed_table.h  implicit_hp_policy.cpp  implicit_hp_search_pure_c.cpp
src/static_search/inorder_policy/: inorder_policy.cpp  inorder_search_pure_c.cpp
src/static_search/misc/: build_hp_tree.cpp  lower_bound_optimized.cpp
test/: config.txt  wd_prototype.cpp
test/test-fa/: Testing.fa  Testing.fq  Testing.q  small-1.fa  small-1.q  small.fa
